Tuborg til mikkels tegning

--- a/Rapport/graphics/designproces.tex
+++ b/Rapport/graphics/designproces.tex
@@ -27,4 +27,9 @@
        
        \path[->,thick](block7.340) edge[bend left = 0] (point2.center);
        
+       
+       
+       
+       \draw [decorate,decoration={brace,amplitude=15pt}](block1.0) -- node[pos=0.5,xshift=1cm]{First step}(block2.0);
+       
 \end{tikzpicture}
