tilføjet datasheet for uc til kilder

--- a/Rapport/litteraturliste.bib
+++ b/Rapport/litteraturliste.bib
@@ -97,7 +97,13 @@ url = {http://www.robot-electronics.co.uk/htm/emg30.htm}
 }
 
 
-
+@ONLINE{lm3s6965,
+author = {{Texas Instruments}},
+title = {LM3S6965 Datasheet},
+month = {jun}
+year = {2012},
+url = {http://www.ti.com/lit/ds/symlink/lm3s6965.pdf}
+}
 
 @ONLINE{DCmotormodel,
 author = {J. Borenstein, and H. R. Everett, and L. Feng},
