ændring af kilde

--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -49,7 +49,7 @@ er belastningens inertimoment (Pan \& Tilt-rammerne).
 	J=J_m+J_L
 	\label{eq:Jtotal} 
  \end{equation}
-Proportionalitetskonstanterne \(K_b\) og \(K_t\) har i SI-enheder samme numeriske værdi, \citep[Physical setup]{matlabdcmodel}.
+Proportionalitetskonstanterne \(K_b\) og \(K_t\) har i SI-enheder samme numeriske værdi, \citep[Side. 5-6]{litteraturdcmodel}.
 
 Strømmen kan vha. ligningerne \ref{eq:Tm_im} og \ref{eq:Tm_leveret} udtrykkes som i ligning \ref{eq:im}.
 \begin{equation}
