--- a/Rapport/litteraturliste.bib
+++ b/Rapport/litteraturliste.bib
@@ -112,9 +112,9 @@ year = {1996},
 url = {http://www-personal.umich.edu/~johannb/Papers/pos96rep.pdf}
 }
 
-@ONLINE{matlabdcmodel,
-author = {MATLAB\textregistered},
-title = {DC Motor Position: System Modeling},
+@ONLINE{litteraturdcmodel,
+author = {Zaccarian, L.},
+title = {DC motors: dynamic model and control techniques},
 year = {2012},
-url = {http://ctms.engin.umich.edu/CTMS/index.php?example=MotorPosition&section=SystemModeling}
+url = {http://control.disp.uniroma2.it/zack/LabRob/DCmotors.pdf}
 }
