--- a/Rapport/graphics/SPIfigur.tex
+++ b/Rapport/graphics/SPIfigur.tex
@@ -21,7 +21,7 @@
 \draw(6.7,-2.5)--(6.9,-2.5)--(7.1,-3.5)--(8.9,-3.5)--(9,-3)--(11,-3);
 \draw[<->,shorten >=-1pt,shorten <=-1pt, thick](3,-4)--(9,-4);
     
-\draw (6,-4.25) node {4 til 16 bits};
+\draw (6,-4.25) node {16 bits};
 
 \draw (0,0.35) node {SSIClk};
 \draw (0,-1.15) node {SSIFss};
