--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -92,6 +92,7 @@ og de to forskellige overførselsfunktioner benævnes hhv. \(G_{m,p}\) og \(G_{m
 Bestemmelsen af inertimomenterne findes i afsnit \ref{sec:inertimoment}.
 
 \subsection{FPGA-modulerne}
+\label{subsec:matFPGA}
 FPGA'ens positionsencoders læser motorens vinkel inden reduktionsgearingen,
 altså outputtet af \(G_m\left(s\right)\).
 Der er altså tale om en kvantisering af output-vinklen.
