--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -72,3 +72,6 @@ men pan-rammen kan pga. en stopklods kun rotere \(154 \degree\)\footnote{Målt e
 Dette giver altså en øvre og en nedre grænse for pan-rammens maksimale udsving,
 som afhænger af reguleringen
 - et for højt overshoot på pan-positionen kan give udsving, der ikke holder sig inden for grænserne.
+Hvis det antages, at vinklen \(0 \degree\) er lige midt imellem pan-rammens rotationsgrænser,
+så den kan rotere \(77 \degree\) til hver side, så er det maksimale overshoot for et 1-radians step-input
+givet ved \(134 \%\).
