--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -4,7 +4,7 @@ Det er valgt at designe regulatoren efter processen illustreret i figur \ref{fig
 \begin{figure}[!th]
 \centering
 \include*{./graphics/designproces}
-\caption[Designprocessen]{Designprocessen. Kilde: \cite{reg_modern_control_systems}.}
+\caption[Designprocessen]{Designprocessen. Kilde: \citep{reg_modern_control_systems}.}
 \label{fig:designproces}
 \end{figure}
 Formålet med reguleringen er som beskrevet i afsnit \ref{sec:problemformulering},
@@ -35,7 +35,9 @@ og at mikrocontrolleren skal regulere begge SISO-undersystemer.
 \begin{tikzpicture}[auto, node distance=2.6cm,>=latex']
 \include*{./graphics/digitalkontroller1}
 \end{tikzpicture}
-\caption[Systemkonfiguration]{Systemkonfiguration}
+\caption[Systemkonfiguration]{Systemkonfiguration (blokdiagram).
+	Området markeret med stiplet linje udgør den digitale regulator.
+	De grønne ovaler angiver "clocksignaler", som leverer pulser til de digitale dele af systemet.}
 \label{fig:digitalkontroller1}
 \end{figure}
 Som beskrevet i afsnit \ref{sec:problemformulering},
@@ -58,119 +60,50 @@ Hvis den diskrete overføringsfunktion eksempelvis afviger 20 \% fra den kontinu
 sandsynligvis overveje at benytte en højere samplingfrekvens til diskretiseringen.
 Sammenligningen af den diskrete overførselsfunktion og den kontinuerte overføringsfunktion
 kan være både i tidsdomænet (fx steprespons) og i frekvensdomænet (frekvensrespons, fx. Bode-plots).
+Når man har den diskretiserede model af systemet, kan man i det diskrete domæne (z-domænet)
+udvikle en regulator - denne er altså diskret fra starten.
 
+Da reguleringen foregår i en task på mikrocontrolleren, vælges det
+at udvikle en diskret regulator efter en diskretiseret model af systemet.
+Således kan perioden hvormed regulerings-task'en skal køre, fastlægges ud fra
+samplingperioden \(T_s\). Hvis man havde valgt at designe en analog regulator
+ville perioden skulle vælges så lav som muligt.
 
-
-
+\subsection{Diskretisering af åbensløjfeoverføringsfunktionerne}
+Som beskrevet ovenfor ønskes det at finde en diskretiseret overføringsfunktion
+for det fysiske system. Den kontinuerte del af systemet, som ønskes diskretiseret,
+er markeret på figur \ref{fig:digitalkontroller2}.
 \begin{figure}[!th]
 \centering
 \begin{tikzpicture}[auto, node distance=2.6cm,>=latex']
 \include*{./graphics/digitalkontroller2}
 \end{tikzpicture}
-\caption[tekst i indholdsfortegnelsen]{figurtekst}
-\label{fig:}
+\caption[Diskretisering af åbensløjfeoverføringsfunktion]{Diskretisering af åbensløjfdeoverføringsfunktion.
+	Den kontinuerte del af systemet (markeret med stiplet linje) ønskes diskretiseret.
+	De grønne ovaler angiver "clocksignaler", som leverer pulser til de digitale dele af systemet.}
+\label{fig:digitalkontroller2}
 \end{figure}
 
+Den diskretiserede åbensløjfeoverføringsfunktion fra duty cycle til output vinkel
+benævnes \(G_{zoh}\left(s\right)\). Dette er fordi D/A-konverteringen modelleres som et Zero-Order Hold kredsløb,
+der fastholder en analog værdi proportional med duty cyclen. Dette stemmer overens med den simplificerede
+model for PWM-signalet beskrevet i afsnit \ref{subsec:matFPGA}.
+Den diskrete overføringsfunktions plads i blokdiagrammet for systemet
+er indtegnet i figur \ref{fig:digitalkontroller3}.
 \begin{figure}[!th]
 \centering
 \begin{tikzpicture}[auto, node distance=2.6cm,>=latex']
 \include*{./graphics/digitalkontroller3}
 \end{tikzpicture}
 \caption[tekst i indholdsfortegnelsen]{figurtekst}
-\label{fig:}
-\end{figure}\section{Reguleringsdesign}
-\label{sec:kontrollerdeign}
-\todo[inline,author=ALLE]{Mangler at blive skrevet}
-Måske skal den første del placeret et andet sted. \\
-
-Litteratur/DCmotor/5.4
-
-
-
-DC motor puls fundet konstanter.
-\subsection{2. ordens differentialligning af DC motorene}
-Den anden ordens differentialligning, som beskriver DC motoren med følgende simplificeringer er givet i ligning \ref{eq:generel_andenordens}.
-\begin{itemize}
-\item bla 
-\item bla 
-\end{itemize}
-
-\begin{align}
-\begin{split}
-v\left( t \right) =\frac { { L }_{ m }\cdot { J }_{ m+PTS } }{ { k }_{ b } } \frac { { d }^{ 2 }\omega  }{ dt } +\frac { { R }_{ m }\cdot { J }_{ m+PTS } }{ { k }_{ b } } \frac { d\omega  }{ dt } +\omega \cdot B\label{eq:generel_andenordens}
-\end{split}
-\end{align}
-
-Laplace med start betingelserne t=0 w'(t)=0 og w''(t)=0,
-\begin{align}
-\begin{split}
-\mathcal{L}\left( v\left( t \right)  \right) &=\mathcal{L}\left( \frac { { L }_{ m }\cdot \left( { J }_{ m }+{ J }_{ PTS } \right)  }{ { k }_{ b } } \frac { { d }^{ 2 }\omega  }{ { dt }^{ 2 } } +\frac { { R }_{ m }\cdot \left( { J }_{ m }+{ J }_{ PTS } \right)  }{ { k }_{ b } } \frac { d\omega  }{ dt } +\omega \cdot B \right) 
-\\
-v\left( s \right) &=\frac { { L }_{ m }\cdot \left( { J }_{ m }+{ J }_{ PTS } \right)  }{ { k }_{ b } } { s }^{ 2 }\cdot \omega \left( s \right) +\frac { { R }_{ m }\cdot \left( { J }_{ m }+{ J }_{ PTS } \right)  }{ { k }_{ b } } { s }\cdot \omega \left( s \right) +B\cdot \omega \left( s \right) 
-\label{eq:generel_andenordens_laplace}
-\end{split}
-\end{align}
-
-
-
-Ligning \ref{eq:generel_andenordens_laplace} faktoriseret, hvorefter det er muligt at finde transferfunktionen for DC motoren. 
-\begin{align}
-\begin{split}
-G\left( s \right) =\frac { \omega \left( s \right)  }{ v\left( s \right)  } =\frac { 1 }{ \frac { { L }_{ m }\cdot \left( { J }_{ m }+{ J }_{ PTS } \right)  }{ { k }_{ b } } { s }^{ 2 }+\frac { { R }_{ m }\cdot \left( { J }_{ m }+{ J }_{ PTS } \right)  }{ { k }_{ b } } s+B } 
-\label{eq:generel_tf}
-\end{split}
-\end{align}
-
-hvor 
-\(K_b = 0.517\), \(B=0.00319\), \(R_m=5.21\), \(J_m=8.26*10^{-4}\), \(Tf=5.71*10^{-2}\), \(Lm=2.667*10^{-3}\), \(J_{tilt}=1.57499*10^{-4}\) og \(J_{pan}=3.15708*10^{-4}\).\\
-\todo[inline,author=Anders]{Der mangler enheder på tallene ovenfor.}
-Inertimomenterne for pan og tilt, som der fremgår fra tidligere, har forskellig påvirkning på DC motor modellen. De indelige transferfunktioner for DC motorene til hhv. pan og tilt-rammerne er givet i ligning \ref{eq:pan_tilt_tf_result}. 
-\begin{align}
-\begin{split}
-G_{ pan }\left( s \right) &=\frac { \omega _{ pan }\left( s \right)  }{ v_{ pan }\left( s \right)  } =\frac { 1 }{ \frac { { L }_{ m }\cdot  \left( { J }_{ m }+{ J }_{ pan } \right) }{ { k }_{ b } } { s }^{ 2 }+\frac { { R }_{ m }\cdot  \left( { J }_{ m }+{ J }_{ pan } \right) }{ { k }_{ b } } s+B } 
-\\
-&=\frac { 1 }{ 5,89\cdot { 10 }^{ -6 }\cdot { s }^{ 2 }+0,01151\cdot s+0,00319 } 
-\\
-G_{ tilt }\left( s \right) &=\frac { \omega _{ tilt }\left( s \right)  }{ v_{ tilt }\left( s \right)  } =\frac { 1 }{ \frac { { L }_{ m }\cdot  \left( { J }_{ m }+{ J }_{ tilt } \right) }{ { k }_{ b } } { s }^{ 2 }+\frac { { R }_{ m }\cdot \left( { J }_{ m }+{ J }_{ tilt } \right) }{ { k }_{ b } } s+B } 
-\\
-&= \frac { 1 }{ 5,073\cdot { 10 }^{ -6 }\cdot { s }^{ 2 }+0,009911\cdot s+0,00319 } 
-\label{eq:pan_tilt_tf_result}
-\end{split}
-\end{align}
-
-\subsection{Krav til systemet}
-Generelt krav
-\begin{itemize}
-\item P.O. = [\%]
-\item Settlingtime = [s]
-\item ESS = 
-\end{itemize}
-
-
-\subsection{Design af PI, PD eller PID}
-\begin{figure}[!th]
-\centering
-\begin{tikzpicture}[auto, node distance=2.6cm,>=latex']
-\include*{./graphics/digitalkontroller1}
-\end{tikzpicture}
-\caption[tekst i indholdsfortegnelsen]{figurtekst}
-\label{fig:}
+\label{fig:digitalkontroller3}
 \end{figure}
+De to overføringsfunktioner hhv. \(G_{pan}\left(s\right)\) og \(G_{tilt}\left(s\right)\)
+har hver en diskretiseret overføringsfunktion hhv. \(G_{zoh,pan}\left(z\right)\) og \(G_{zoh,tilt}\left(z\right)\).
 
-\begin{figure}[!th]
-\centering
-\begin{tikzpicture}[auto, node distance=2.6cm,>=latex']
-\include*{./graphics/digitalkontroller2}
-\end{tikzpicture}
-\caption[tekst i indholdsfortegnelsen]{figurtekst}
-\label{fig:}
-\end{figure}
-
-\begin{figure}[!th]
-\centering
-\begin{tikzpicture}[auto, node distance=2.6cm,>=latex']
-\include*{./graphics/digitalkontroller3}
-\end{tikzpicture}
-\caption[tekst i indholdsfortegnelsen]{figurtekst}
-\label{fig:}
-\end{figure}
+Kravet til \(G_{zoh,pan}\left(z\right)\) og \(G_{zoh,tilt}\left(z\right)\) er, at de
+med god tilnærmelse opfører sig som \(G_{pan}\left(s\right)\) og \(G_{tilt}\left(s\right)\),
+og dette krav kan skrives som et mindstekrav til samplingfrekvensen \(f_s\).
+Hvis den diskrete overføringsfunktion med god tilnærmelse opfører sig
+som den kontinuerte overføringsfunktion inden for den kontinuerte overføringsfunktions
+båndbredde, er kravet opfyldt\citep
