smårettelser i bibtex og uc

--- a/Rapport/content/Mikrocontroller.tex
+++ b/Rapport/content/Mikrocontroller.tex
@@ -49,7 +49,8 @@ Systemet skal kunne reagere på følgende bruger inputs:
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Beskrivelse af valgt(?) mikrocontroller.}
-Den udleverede mikrocontroller er en 32 bit Stellaris LM3S6965, baseret på en ARM Cortex M3 kerne. Den opererer ved 50 mHz og bruger Thump 2 instruktionssættet. Den indeholder 256 KB flash hukommelse samt 64 KB SRAM. 
+Den udleverede mikrocontroller er en 32 bit Stellaris LM3S6965, baseret på en ARM Cortex M3 kerne. Den opererer ved 50 [mHz] og bruger Thump 2 instruktionssættet. Den indeholder 256 [KB] flash hukommelse samt 64 [KB] SRAM. 
+\citep{lm3s6965}
 
 SPI er indbygget som et hardwaremodul, med seperate FIFO buffere til afsendelse og modtagelse. Hardwaren sender data fra den ene den buffer og lægger modtaget data i den anden. Derfor er det ikke nødvendigt for programmøren at holde styr på timingen. Størrelsen af hvert dataframe kan være 4 - 16 bits. 
 
@@ -62,6 +63,7 @@ Controlleren indeholder også et væld af hardwaremoduler til andre funktioner, 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Valg af skedulering}
+\todo[inline, author=Michael]{Jeg skal lige have skimmet OSC bogen for ideer til denne sektion}
 Der er undersøgt 4 forskellige mulige skeduleringsalgoritmer: 
 
 \begin{itemize}
@@ -92,7 +94,8 @@ Queues & Ja & Ja & Nej & Nej \\
 \hline 
 Semaphore & ?  & Counting + binære & Binære  & Nej  \\ 
 \hline 
-• & • & • & • & • \\ 
+Introduceret & Nej & Ja & Ja & Ja \\ 
+i EMP kurset &   &   &   &   \\
 \hline 
 \end{tabular} 
 \caption{Specifikationer for de undersøgte systemer}
