--- a/Rapport/litteraturliste.bib
+++ b/Rapport/litteraturliste.bib
@@ -100,7 +100,7 @@ url = {http://www.robot-electronics.co.uk/htm/emg30.htm}
 @ONLINE{lm3s6965,
 author = {{Texas Instruments}},
 title = {LM3S6965 Datasheet},
-month = {jun}
+month = {jun},
 year = {2012},
 url = {http://www.ti.com/lit/ds/symlink/lm3s6965.pdf}
 }
