rettelser ud fra anders' feedback

--- a/Rapport/content/Mikrocontroller.tex
+++ b/Rapport/content/Mikrocontroller.tex
@@ -49,18 +49,14 @@ Systemet skal kunne reagere på følgende bruger inputs:
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Beskrivelse af valgt(?) mikrocontroller.}
-Den udleverede mikrocontroller er en 32 bit Stellaris LM3S6965, baseret på en ARM Cortex M3 kerne. Den opererer ved 50 [mHz] og bruger Thump 2 instruktionssættet. Den indeholder 256 [KB] flash hukommelse samt 64 [KB] SRAM. 
+Den udleverede mikrocontroller er en 32 bit Stellaris LM3S6965, baseret på en ARM Cortex M3 kerne. Den opererer ved 50 [MHz] og bruger Thump 2 instruktionssættet. Den indeholder 256 [kB] flash hukommelse samt 64 [kB] SRAM. 
 \citep{lm3s6965}
-
-Den udleverede mikrocontroller er en 32 bit Stellaris LM3S6965, baseret på en ARM Cortex M3 kerne. Den opererer ved 50 mHz\todo[author=Anders]{Det er vel [MHz] i stedet for [mHz]} og bruger Thump 2 instruktionssættet. Den indeholder 256 KB\todo[author=Anders]{Det er vel [kB] i stedet for [KB]} flash hukommelse samt 64 KB SRAM. 
-
 
 SPI er indbygget som et hardwaremodul, med seperate FIFO buffere til afsendelse og modtagelse. Hardwaren sender data fra den ene den buffer og lægger modtaget data i den anden. Derfor er det ikke nødvendigt for programmøren at holde styr på timingen. Størrelsen af hvert dataframe kan være 4 - 16 bits. 
 
 UART er også implementeret som et hardwaremodul. Modulet indeholder seperate FIFO buffere til afsendelse og modtagelse af data, hver med plads til 16 datawords (max 8 bit). 
 
 Controlleren indeholder også et væld af hardwaremoduler til andre funktioner, men disse er ikke relevante for projektet.
-
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -71,8 +67,8 @@ Der er undersøgt 4 forskellige mulige skeduleringsalgoritmer:
 
 \begin{itemize}
 \itemsep1pt
-	\item CoOS\footnote{coocox.com/CoOS.htm} \todo[inline,author=Anders]{Jeg synes det er pænere hvis der bruges \url{www.coocox.com/CoOS.htm} i fodnoten.}
-	\item freeRTOS\footnote{freertos.org}
+	\item CoOS\footnote{\url{www.coocox.com/CoOS.htm}} 
+	\item freeRTOS\footnote{\url{freertos.org}}
 	\item Run-To-Complete-Scheduler\footnote{Introduceret i EMP-kurset}
 	\item Super-loop
 \end{itemize}
