--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -17,7 +17,7 @@ og at tilt-rammen er lodret (parallel med yz-planet).
 Trackingen skal forestille at have til formål at assistere i nedskydningen af lerduen,
 og man skal således forestille sig et gevær monteret på tilt-rammen:
 Et tænkt masseløst gevær placeret i skæringspunktet mellem pan- og tilt-akserne står vinkelret
-på tilt-planet, og skal skyde lerduen jf. reglerne for ES, dvs. inden den når "low house" jf. figur \ref{fig:ES}.
+på tilt-planet, og skal skyde lerduen jf. reglerne for ES, dvs. inden den når "low house"\todo[inline,author=Anders]{Det er ikke "low house" men nedslagspunkt.} jf. figur \ref{fig:ES}.
 Da man har to skud til rådighed, er det et krav at trackingen foretaget af PTS har stabiliseret sig på lerduen
 i tide, så man kan nå at affyre to skud.
 
