--- a/Rapport/content/kommunikation_mellem_mikrocontroller_og_FPGA.tex
+++ b/Rapport/content/kommunikation_mellem_mikrocontroller_og_FPGA.tex
@@ -10,31 +10,32 @@
 \end{figure}
 
 
-Kommunikationen mellem Micro contolleren og FPGA’en foregår med SPI. SPI står for Serial Peripheral Interface. Det er en protokol hvor, der bliver overført data mellem en master og en eller flere slaver. Overførelsen sker med full duplex, så der bliver sendt data både fra masteren og slaven på samme tid.
+Kommunikationen mellem Mikrocontolleren og FPGA’en foregår med SPI. SPI står for Serial Peripheral Interface. Det er en protokol hvor, der bliver overført data mellem en master og en eller flere slaver. Overførelsen sker med full duplex, så der bliver sendt data både fra masteren og slaven på samme tid. Opstillingen mellem en master og en slave kan ses på figur ??.
 
 Der er fire kanaler mellem masteren og slaverne: Slave Select, Serial Clock (SCLK), MOSI og MISO. Slave Select bruges til at vælge hvilken slave, der skal overføres data med. Den kan også sammenlignes med en chip select. SCLK bruges som clock frekvens, den synkroniserer Salve Select, MOSI og MISO. MOSI står for Master Output Slave Input, det er dataet, master sender til slaven, ligeså er MISO Master Input Slave Output, som er dataet, master modtager fra slaven.
-
-Når der er flere end en slave, deler de SCLK, MOSI og MISO, men de har en Slave Select hver. Forløbet er således at master sender et Slave Select signal til den ønskede slave. De slaver, der ikke har modtaget et SS signal, ignorer det, der bliver sendt på MOSI og MISO. I et system kun med en slave, kan SS udelades, da der kun er en slave at vælge. 
  
 
 \subsection{Overvejelser og valg}
-Der er gået mange overvejelser i hvordan SPI'en mellem Micro controlleren og FPGA'en skal  opbygges.
+Der er gået mange overvejelser i hvordan SPI'en mellem Mikrocontrolleren og FPGA'en skal  opbygges.
 
-Det blev vedtaget at Mico controlleren var masteren og FPGA'en blev slaven, da FPGA'en helst skulle være så enkel som mulig.
+Det blev vedtaget at Mikrocontrolleren var masteren og FPGA'en blev slaven, da FPGA'en helst skulle være så enkel som mulig.
 
-Micro controlleren har også indbygget tre SPI programmer. De tre typer er TI Synchronous Serial Frame Format (SSFT), Freescale og Microwire. Til at overfører dataene mellem Micro controlleren og FPGA’en skal der bruges en enkel protokol med full duplex. Hovedgrundene for at protokollen skal være enkel, er at der ikke sendes meget data, dataene er enkel, og afstanden, den sendes, er kort. Derfor blev SSFT valgt som protokol. I SSFT ligger svaret på nogle af overvejelserne. Overvejelserne har været om MOSI skal trigger på rising eller falling edge, og hvordan Slave Select skulle opføre sig.
+Mikrocontrolleren har også indbygget tre SPI programmer. De tre typer er TI Synchronous Serial Frame Format (SSFT), Freescale og Microwire. Til at overfører dataene mellem Mikrocontrolleren og FPGA’en skal der bruges en enkel protokol med full duplex. Hovedgrundene for at protokollen skal være enkel, er at der ikke sendes meget data, dataene er enkel, og afstanden, den sendes, er kort. Derfor blev SSFT valgt som protokol. I SSFT ligger svaret på nogle af overvejelserne. Overvejelserne har været om MOSI skal trigger på rising eller falling edge, og hvordan Slave Select skulle opføre sig.
 
 Frekvensen af SCLK skal vælges så høj, at SPI ikke bliver en flaskehals i kommunikationen mellem Micro controller og FPGA’en, og tilpas lav, så der ikke introduceres unødige fejlkilder, ved at FPGA’en ikke kan følge med. Resultat ???
 
-\todo[author=Åse,inline]{HVad er SCLK's frekvens}
+\todo[author=Åse,inline]{Hvad er SCLK's frekvens}
 
-Størrelsen af framen skulle være sås stor, at PWM kan sendes til FPGA’en, og positionen i form af ticks kan sendes fra FPGA’en. Begge skal kunne sendes i den rigtige opløsning. PWM og ticks har begge en størrelse af 11 bit. Der skal også være et motor, retnings- og PWMsetbit. Det giver at framen mindst skal være 14 bit lang. Micro controlleren understøtter en størrelse mellem fire og 16 bit.16 bit blev valgt, da der er plads til udbygning.
-
+Størrelsen af framen skulle være så stor, at PWM kan sendes til FPGA’en, og positionen i form af ticks kan sendes fra FPGA’en. Begge skal kunne sendes i den rigtige opløsning. PWM og ticks har begge en størrelse af 11 bit. Der skal også være et motor, retnings- og PWMsetbit. Det giver at framen mindst skal være 14 bit lang. Mikrocontrolleren understøtter en størrelse mellem fire og 16 bit.16 bit blev valgt, da der er plads til udbygning.
 
 
 \subsection{Brugen af SPI}
 
-For at lave SPI på Microcontrolleren, bruges versionen SSFT. Den bruger fire pins ved overførelse af data: SSIClk, SSIFss, SSITx og SSIRx. SSI står for Synchronous Serial Interface, som er Micro controlleren version af SPI. SSIClk er SCLK, SSIFss er Slave Select, SSITx er MOSI og SSIRx er MISO.
+\todo[author=Åse, inline]{Det teknindske om Mikrocontroller er meget kort. Men det er noget der bare kan læses i stabladet. Skal der henvises til databladet.}
+
+På mikrocontrolleren bruges SPI verion SSFT. Den er sat til at være masteren, derfor er det den, som  inistialiserer overførlsen mellem mikrocontrolleren og FPGA'en. En detaljeret beskrivelse se databladet.
+
+På FPGA'en er SPI'en tp shift registre, der konverterer signalet fra seriel til parallel og vice versa. Efter konverteringen sendes det videre ind i systemmet. 
 
 %%%%%%%%%%%% TIKZPICTURE %%%%%%%%%%%%
 \begin{figure}[!th]
@@ -46,11 +47,10 @@ For at lave SPI på Microcontrolleren, bruges versionen SSFT. Den bruger fire pi
 \label{fig:}
 \end{figure}
 
-En frame tager antallet af SLCK at overfører. Antallet af SCLK en puls mere end frame størrelsen. Da der i denne opgave er en frame størrelse på 16 bit, så har SLCK 17 pulser. Ved den første puls sættes Slave Select høj, men sættes lav igen ved falling edge på SCLK. Bagefter sendes de 16 bit synkront med SCLK. Hver gang der er rising edge på SCLK sendes et bit, FPGA’en aflæser bitten på falling edge, da MOSI har haft tid til at omstille sig til høj eller lav.
+\todo[author=Åse,inline]{Figur måske ligemget nu. }
 
-SPI på FPGA’en er meget enkel. Det er to shift registre, en til MOSI og en til MISO. På Micro controlleren kommer dataene fra en FIFO buffer. Det er FIFO bufferen der shifter det mest betydende bit (MSB) ned på MOSI. På FPGA’en bliver MOSI shiftet ind i et shift register, så det passer med at MSB er MSB’s plads. På FGPA’en er det MSB, den sender først til MISO. Når Slave Select er høj, bliver der ikke overførst data, derfor er det, når den er høj, hvor der bliver flyttet data rundt, da der man så ikke flytter data for tidligt eller sendt. 
 
-Det er en enkel protokol som bliver brugt uden tjeksum eller nogen anden form for administration. Frame størrelse er på 16 bit. På figur ?? kan man se opbygningen af både framen der bliver sendt til FPGA’en og til Micro controlleren. Til FPGA’en bliver der sendt den PWM, der skal sættes på den bestemte motor i den bestemte retning. Det er det motor- og retningsbittene bestemmer. Da SPI er full duplex skal der sendes data fra både Micro controlleren og FPGA’en, FPGA’en kan ikke sende data uden at Micro controlleren også gør det. På Micro controlleren ville man gerne kunne få en position uden, at den sætter en ny PWM. Derfor skal der bruges en bit, hvor FGPA’en kan se om den skal sætte PWM’en, eller om den kun skal sende information tilbage. Der er det PWMset bruges til. Hvis den er høj bliver framen kasseret, men hvis den er lav bliver PWM’en sat. Framen der bliver sendt til Micro controlleren er posotionen på den bestemte motor.  
+Det er en enkel protokol som bliver brugt uden tjeksum eller nogen anden form for administration. Frame størrelse er på 16 bit. På figur ?? kan man se opbygningen af både framen der bliver sendt til FPGA’en og til Mikrocontrolleren. Til FPGA’en bliver der sendt den PWM, der skal sættes på den bestemte motor i den bestemte retning. Det er det motor- og retningsbittene bestemmer. Da SPI er full duplex skal der sendes data fra både Mikrocontrolleren og FPGA’en, FPGA’en kan ikke sende data uden at Mikrocontrolleren også gør det. På Mikrocontrolleren ville man gerne kunne få en position uden, at den sætter en ny PWM. Derfor skal der bruges en bit, hvor FGPA’en kan se om den skal sætte PWM’en, eller om den kun skal sende information tilbage. Der er det PWMset bruges til. Hvis den er høj bliver framen kasseret, men hvis den er lav bliver PWM’en sat. Framen der bliver sendt til Micro controlleren er posotionen på den bestemte motor.  
 
 
 %%% FORMAT SPI
