--- a/Rapport/litteraturliste.bib
+++ b/Rapport/litteraturliste.bib
@@ -52,6 +52,15 @@ publisher = {Pearson Education},
 address={New Jersey},
 }
 
+@Book{dsp,
+author     = {Tan, Li and Jiang, Jean},
+year        ={2013},
+title          ={Digital Signal Processing},
+edition    ={2},
+publisher = {Elsevier},
+address={Oxford, England},
+}
+
 
 @Book{fund_of_physics,
 author     = {Halliday, D. and Resnick, R. and Walker, J.},
