Tilføjet nogle få todo m.m.

--- a/Rapport/content/FPGA.tex
+++ b/Rapport/content/FPGA.tex
@@ -13,6 +13,8 @@ Eftersom de fleste krav til FPGAen er givet af projektbeskrivelsen, er der ikke
 lavet noget større analysearbejde af FPGAens funktionalitet. Undervejs i 
 udviklingen af funktionaliteten er der dog taget nogle valg.
 
+\todo[author=Åse,inline]{Behøves subsubsection? Det er nogle små afsnit.}
+
 \subsubsection*{Generiske komponenter}
 For at lave et system med lav kobling er det forsøgt at lave 
 generiske komponenter til de funktionaliteter, der er af generel art. 
@@ -63,6 +65,8 @@ Herunder følger en forklaring på komponenterne.
 \end{figure}
 
 \todo[inline, color = pink]{Mikkel: Måske ender meget af nedenstående i appendix?}
+
+\todo[author=Åse,inline]{Teksten over figuren kan uddybes, med at beskrive de vigtigeste komponenter. Mens kan teksten nedenunder komme i appendix.}
 
 \subsection*{Tic counter}
 \textbf{Input:}
