Tilføjet kommentar i form af todo's

--- a/Rapport/content/indledning.tex
+++ b/Rapport/content/indledning.tex
@@ -1,2 +1,4 @@
 \section*{Indledning}
 \todo[inline,author=ALLE]{Mangler at blive skrevet}
+\todo[inline,author=Anders]{Vi skal lige snakke omkring hvordan vi bruger parenteser.}
+\todo[inline,author=Anders]{}
