--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -75,3 +75,4 @@ som afhænger af reguleringen
 Hvis det antages, at vinklen \(0 \degree\) er lige midt imellem pan-rammens rotationsgrænser,
 så den kan rotere \(77 \degree\) til hver side, så er det maksimale overshoot for et 1-radians step-input
 givet ved \(134 \%\).
+\todo[inline,author=Anders]{P.O. skrives 34\% i følge bogen. desuden skrives det på nævnte facon senere i 6.2.}
