Nu kan den dannes.

--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -4,9 +4,10 @@ Det er valgt at designe regulatoren efter processen illustreret i figur \ref{fig
 \begin{figure}[!th]
 \centering
 \include*{./graphics/designproces}
-\caption[Designprocessen]{Designprocessen. Kilde: \citep{reg_modern_control_systems}.\todo[author=Anders]{Der bruges ikke kilde før i rapporten. Eventuel henvis til specifik side.}}
+\caption[Designprocessen]{Designprocessen. Kilde: \citep{reg_modern_control_systems}.}
 \label{fig:designproces}
 \end{figure}
+\todo[inline,author=Anders]{Der bruges ikke kilde før i rapporten. Eventuel henvis til specifik side.}
 Formålet med reguleringen er som beskrevet i afsnit \ref{sec:problemformulering},
 at kontrollere pan- og tilt-rammernes position, så de tracker en lerdue.
 Dette gøres ved styring af deres hastighed, ved at justere spændingsfaldene over de
