Indsat todo og rettet math problem

--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -171,11 +171,20 @@ Graferne viser ændringen af de tre størrelser i procent i forhold til det kont
 \begin{figure}[!th]
 \centering
 	\includegraphics[width=1\textwidth]{./graphics/diskretStepFreq.eps}
-\caption[Sammenligning af steprespons-performance for kontinuert system med diskretiseret system (\(G_{zoh}\))]
+%\caption[Sammenligning af steprespons-performance for kontinuert system med diskretiseret system (\(G_{zoh}\))]
+%{Sammenligning af steprespons-performance for kontinuert system med diskretiseret system.
+%Den blå kurve angiver fejlen i forhold til lukketsløjferesponsen af \(G_{tilt}\),
+%mens den grønne kurve angiver fejlen i forhold til lukketsløjferesponsen af \(G_{pan}\).
+%}
+
+\caption[Sammenligning af steprespons-performance for kontinuert system med diskretiseret system $G_{zoh}$]
 {Sammenligning af steprespons-performance for kontinuert system med diskretiseret system.
-Den blå kurve angiver fejlen i forhold til lukketsløjferesponsen af \(G_{tilt}\),
-mens den grønne kurve angiver fejlen i forhold til lukketsløjferesponsen af \(G_{pan}\).
+Den blå kurve angiver fejlen i forhold til lukketsløjferesponsen af $G_{tilt}$,
+mens den grønne kurve angiver fejlen i forhold til lukketsløjferesponsen af $G_{pan}$.
 }
+
+% Åses LateX kan ikke lide \math\ i todo, caption og tilsvarende.
+
 \label{fig:diskretStepFreq}
 \end{figure}
 
